# sovereign-agent

./: CLAUDE.md  config.example.yaml  pyproject.toml
deploy/: .env.example  LAMBDA_A100_REPORT.md  README.md  RUNPOD_SETUP.md  deploy.sh  runpod_session.bat  session.bat  session.sh  sync.sh  test_deployment.py
src/: __init__.py  main.py  main_v2.py  web.py
src/agent/: __init__.py  code_intelligence.py  code_review.py  context.py  context_window.py  core.py  core_v2.py  error_recovery.py  llm.py  metrics.py  operation_cache.py  parallel.py  pattern_learner.py  planner.py  prompts.py  prompts_v2.py  router.py  specializations.py  startup.py  test_generator.py  verification.py
src/api/: __init__.py  models.py  server.py  session.py
src/api/static/: app.js  index.html  style.css
src/core/: __init__.py  config.py  logging.py
src/memory/: __init__.py  codebase_index.py  conversation_store.py  file_watcher.py  knowledge_base.py  vector_store.py
src/tools/: __init__.py  base.py  compound.py  dependencies.py  docgen.py  editor.py  filesystem.py  git.py  learning.py  python_exec.py  refactor.py  review.py  scaffolding.py  search.py  shell.py  test_gen.py  vision.py  visual_studio.py  web_research.py
tests/: test_code_review.py  test_editor.py  test_filesystem.py  test_verification.py
