[project]
name = "sovereign-agent"
version = "0.1.0"
description = "A locally-running AI coding agent built from scratch"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",      # Async HTTP client for Ollama
    "rich>=13.7.0",       # Pretty terminal output
    "pyyaml>=6.0.0",      # YAML configuration files
    "chromadb>=0.4.0",    # Vector database for RAG
    "fastapi>=0.109.0",   # Web API framework
    "uvicorn>=0.27.0",    # ASGI server
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
